# dotbot-ifhostname

./: .editorconfig  LICENSE  Makefile  README.md  ifhostname.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  test.yml
tests/: test_ifhostname.py
